force-app/main/default/objects/fferpcore__ScheduledJobRun__c/fferpcore__ScheduledJobRun__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__ScheduledJobRunHelp</customHelpPage>
    <label>Scheduled Job Run</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{00000000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Job Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>