force-app/main/default/objects/fferpcore__ScheduledJobRun__c/fields/fferpcore__BatchProcess__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BatchProcess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Process</label>
    <referenceTo>fferpcore__fflib_BatchProcess__c</referenceTo>
    <relationshipName>Workers</relationshipName>
    <type>Lookup</type>
</CustomField>