force-app/main/default/objects/fferpcore__ScheduledJobRun__c/fields/fferpcore__Status__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>