force-app/main/default/objects/fferpcore__ScheduledJobRun__c/fields/fferpcore__TotalNumberOfErrors__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TotalNumberOfErrors__c</fullName>
    <description>Total number of records with an error based on the number of batch logs that contain a log type of Error.</description>
    <inlineHelpText>Total number of records with an error based on the number of batch logs that contain a log type of Error.</inlineHelpText>
    <label>Total Errors</label>
    <summaryFilterItems>
        <field>fferpcore__ScheduledJobLog__c.fferpcore__LogType__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>fferpcore__ScheduledJobLog__c.fferpcore__BatchRun__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>