force-app/main/default/objects/fferpcore__ScheduledJobRun__c/fields/fferpcore__TotalNumberOfExternal__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TotalNumberOfExternal__c</fullName>
    <description>Total number of batches that exceed Salesforce governor limits or contain other issues based on the number of batch logs that contain a log type of External.</description>
    <inlineHelpText>Total number of batches that exceeded Salesforce governor limits or contain other issues.</inlineHelpText>
    <label>Total Number of Batches Exceeding Limits</label>
    <summaryFilterItems>
        <field>fferpcore__ScheduledJobLog__c.fferpcore__LogType__c</field>
        <operation>equals</operation>
        <value>External</value>
    </summaryFilterItems>
    <summaryForeignKey>fferpcore__ScheduledJobLog__c.fferpcore__BatchRun__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>